<?xml version="1.0" encoding="utf-8"?>

<!--
Scrollview -> for keyboard scrolling
 Linear Layout -> all child align vertically
  Linear Layout -> set weight 1 and gravity center (I want all my inputs to be displayed in the middle between buttons and top of the screen.)
    TextInputLayout
    TextInputLayout
    TextInputLayout
    TextInputLayout
  Button
  Button
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.shoe_detail.ShoeDetailFragment">

    <data>

        <variable
            name="mainViewModel"
            type="com.udacity.shoestore.viewmodel.MainActivityViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_new_shoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_shoe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shoe_name"
                        android:text="@={mainViewModel.shoeName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company"
                        android:text="@={mainViewModel.shoeCompany}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_shoe_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/size"
                        android:inputType="number"
                        android:text="@={mainViewModel.shoeSize}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:text="@={mainViewModel.shoeDescription}" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_new_shoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->mainViewModel.addNewShoe()}"
                android:text="@string/add_shoe" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/cancel" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>